--- a/setup-aiverify/aiverify-kube/aiverify-portal.yml.tmpl
+++ b/setup-aiverify/aiverify-kube/aiverify-portal.yml.tmpl
@@ -1,50 +1,52 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: aiverify-test-engine-config
-  namespace: dev
+  name: aiverify-portal-config
+  namespace: <NAMESPACE>
 data:
-   # test-engine env
-   CORE_MODULES_FOLDER: ../test-engine-core-modules
-   VALIDATION_SCHEMAS_FOLDER: ./test_engine_app/validation_schemas/
-   REDIS_CONSUMER_GROUP: MyGroup
-   REDIS_SERVER_HOSTNAME: aiverify-redis-service.dev.svc.cluster.local
-   REDIS_SERVER_PORT: '6379'
-   API_SERVER_PORT: '8080'
+  # portal env
+  DB_HOST: aiverify-db-service.<NAMESPACE>.svc.cluster.local
+  DB_PORT: '27017'
+  REDIS_URI: redis://aiverify-redis-service.<NAMESPACE>.svc.cluster.local
+  # api-gw env
+  REDIS_HOST: aiverify-redis-service.<NAMESPACE>.svc.cluster.local
+  REDIS_PORT: '6379'
+  TEST_ENGINE_URL: http://aiverify-test-engine-service.<NAMESPACE>.svc.cluster.local:8080
+  ALLOWED_ORIGINS: https://aiverify.eks-<NAMESPACE>.aipo-imda.net
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: aiverify-test-engine-service
-  namespace: dev
+  name: aiverify-portal-service
+  namespace: <NAMESPACE>
 spec:
   ports:
     - name: http
-      port: 8080
+      port: 80
       protocol: TCP
-      targetPort: 8080
+      targetPort: 3000
   selector:
-    app.kubernetes.io/name: aiverify-test-engine
+    app.kubernetes.io/name: aiverify-portal
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aiverify-test-engine-deployment
-  namespace: dev
+  name: aiverify-portal-deployment
+  namespace: <NAMESPACE>
   labels:
-    app.kubernetes.io/name: aiverify-test-engine
+    app.kubernetes.io/name: aiverify-portal
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/name: aiverify-test-engine
+      app.kubernetes.io/name: aiverify-portal
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: aiverify-test-engine
+        app.kubernetes.io/name: aiverify-portal
     spec:
       serviceAccountName: default
       securityContext:
@@ -55,15 +57,26 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       containers:
-        - name: aiverify-test-engine
-          image: 052567997892.dkr.ecr.ap-southeast-1.amazonaws.com/aiverify-test-engine:0.10
+        - name: aiverify-portal
+          image: <PORTAL_IMG_URL>
           args:
             - "bash"
             - "-c"
-            - "cp -a aiverify/stock-plugins/* aiverify/ai-verify-portal/plugins; cd aiverify/test-engine-app; python3 -m test_engine_app"
+            - "cd aiverify/ai-verify-apigw; node app.mjs & cd ../ai-verify-portal; npm run start"
+          env:
+          - name: DB_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: aiverify-db-secret
+                key: username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: aiverify-db-secret
+                key: password
           envFrom:
           - configMapRef:
-              name: aiverify-test-engine-config
+              name: aiverify-portal-config
           resources:
             limits:
               cpu: 1000m
