--- a/setup-aiverify/aiverify-kube/aiverify-redis.yml.tmpl
+++ b/setup-aiverify/aiverify-kube/aiverify-redis.yml.tmpl
@@ -51,7 +51,7 @@ metadata:
   namespace: <NAMESPACE>
 spec:
   ports:
-    - name: redis-tcp
+    - name: tcp
       port: 6379
       protocol: TCP
       targetPort: 6379
