--- a/aiverify-portal/app/canvas/components/styles/designer.module.css
+++ b/aiverify-portal/app/canvas/components/styles/designer.module.css
@@ -77,7 +77,7 @@
 	*/
   position: relative;
   background-color: #e3e2e2;
-  margin: auto;
+  /* margin: auto; */
   margin-bottom: 50px;
   padding: var(--A4-canvas-padding);
 }
@@ -188,4 +188,12 @@
   animation-name: animateHeight;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+
+.noDrag {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
