overlay click close handler

--- a/aiverify-portal/app/canvas/components/styles/designer.module.css
+++ b/aiverify-portal/app/canvas/components/styles/designer.module.css
@@ -107,6 +107,12 @@
   user-drag: none;
 }
 
-.canvas h1 {
+.canvas h1,
+.canvas .h1TextInput {
   @apply text-black text-2xl;
+}
+
+.canvas h2,
+.canvas .h2TextInput {
+  @apply text-black text-xl;
 }
