h1 text input style

--- a/aiverify-portal/app/canvas/components/styles/designer.module.css
+++ b/aiverify-portal/app/canvas/components/styles/designer.module.css
@@ -108,11 +108,11 @@
 }
 
 .canvas h1,
-.canvas .h1TextInput {
+.h1TextInput {
   @apply text-black text-2xl;
 }
 
 .canvas h2,
-.canvas .h2TextInput {
+.h2TextInput {
   @apply text-black text-xl;
 }
