extract textedit hoc and add theme report css

--- a/aiverify-portal/app/globals.css
+++ b/aiverify-portal/app/globals.css
@@ -1,5 +1,6 @@
 @import '@fontsource-variable/inter';
 @import '@/lib/theme/colors.css';
+@import '@/lib/theme/standardReport.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
