--- a/aiverify-portal/lib/theme/standardReport.css
+++ b/aiverify-portal/lib/theme/standardReport.css
@@ -3,14 +3,41 @@
     h1 {
       @apply text-4xl font-bold leading-normal;
     }
+    .input-h1 {
+      @apply w-full text-4xl font-bold leading-normal text-black focus:outline-none;
+    }
     h2 {
       @apply text-3xl font-bold;
+    }
+    .input-h2 {
+      @apply w-full text-3xl font-bold text-black focus:outline-none;
     }
     h3 {
       @apply text-2xl font-bold;
     }
+    .input-h3 {
+      @apply w-full text-2xl font-bold text-black focus:outline-none;
+    }
     p {
       @apply text-base;
     }
+  }
+}
+
+.editing-overlay {
+  form {
+    @apply h-full w-full;
+  }
+  .input-h1 {
+    @apply w-full text-4xl font-bold leading-normal text-black focus:outline-none;
+    @apply h-full resize-none overflow-hidden whitespace-pre-wrap;
+  }
+  .input-h2 {
+    @apply w-full text-3xl font-bold text-black focus:outline-none;
+    @apply h-full resize-none overflow-hidden whitespace-pre-wrap;
+  }
+  .input-h3 {
+    @apply w-full text-2xl font-bold text-black focus:outline-none;
+    @apply h-full resize-none overflow-hidden whitespace-pre-wrap;
   }
 }
