--- a/aiverify-portal/lib/theme/standardReport.css
+++ b/aiverify-portal/lib/theme/standardReport.css
@@ -1,25 +1,31 @@
 #pagesWrapper {
   .standard-report-page {
     h1 {
-      @apply text-4xl font-bold leading-normal;
+      @apply mb-1 text-4xl font-bold leading-normal;
     }
     .input-h1 {
       @apply w-full text-4xl font-bold leading-normal text-black focus:outline-none;
     }
     h2 {
-      @apply text-3xl font-bold;
+      @apply mb-1 text-3xl font-bold;
     }
     .input-h2 {
       @apply w-full text-3xl font-bold text-black focus:outline-none;
     }
     h3 {
-      @apply text-2xl font-bold;
+      @apply mb-1 text-2xl font-bold;
     }
     .input-h3 {
       @apply w-full text-2xl font-bold text-black focus:outline-none;
     }
     p {
       @apply text-base;
+    }
+    ul {
+      @apply list-disc p-4 pl-5;
+    }
+    ol {
+      @apply list-decimal pl-5;
     }
   }
 }
