rename print hook and fix state reset because of print

--- a/aiverify-portal/lib/theme/standardReport.css
+++ b/aiverify-portal/lib/theme/standardReport.css
@@ -4,7 +4,7 @@
  * It is also used to style the editing overlay.
  */
 
-#pagesWrapper {
+#printableContent {
   .standard-report-page {
     @apply text-base;
     h1 {
