--- a/aiverify-portal/app/inputs/checklists/upload/excel/components/ExcelUploader.module.css
+++ b/aiverify-portal/app/inputs/checklists/upload/excel/components/ExcelUploader.module.css
@@ -30,18 +30,18 @@
 }
 
 .fileList {
-  padding: 0 10px; /* Add padding instead of fixed margin */
-  margin: 0 auto; /* Center the list */
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 .fileItem {
-  width: 100%; /* Full width of parent */
+  width: 100%;
   padding: 20px;
 }
 
 .fileHeader {
   display: flex;
-  justify-content: space-between; /* Space between file name and remove button */
+  justify-content: space-between;
   align-items: left;
 }
 
